After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651818 - Crash in gtk_app_chooser_refresh()
Crash in gtk_app_chooser_refresh()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkAppChooser
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Cosimo Cecchi
Depends on:
Blocks:
 
 
Reported: 2011-06-03 22:07 UTC by Cosimo Cecchi
Modified: 2011-10-10 12:49 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
appchooser: add a GCancellable to the search operation (5.74 KB, patch)
2011-10-03 15:52 UTC, Cosimo Cecchi
committed Details | Review
appchooser: make the "Find applications online" follow search state (1.24 KB, patch)
2011-10-03 15:52 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-06-03 22:07:30 UTC
Forwarded from downstream Fedora report: https://bugzilla.redhat.com/show_bug.cgi?id=699046



Thread 1 (Thread 0x7f47a7b2c9c0 (LWP 2607))

  • #0 gtk_app_chooser_refresh
    at gtkappchooser.c line 119
  • #1 search_for_mimetype_ready_cb
    at gtkappchooserdialog.c line 136
  • #2 install_mime_types_ready_cb
    at gtkappchooseronlinepk.c line 120
  • #3 reply_cb
    at gdbusproxy.c line 2159
  • #4 g_dbus_connection_call_done
    at gdbusconnection.c line 5010
  • #5 complete_in_idle_cb
    at gsimpleasyncresult.c line 757
  • #6 g_main_dispatch
    at gmain.c line 2440
  • #7 g_main_context_dispatch
    at gmain.c line 3013
  • #8 g_main_context_iterate
    at gmain.c line 3091
  • #9 g_main_loop_run
    at gmain.c line 3299
  • #10 gtk_main
    at gtkmain.c line 1358
  • #11 g_application_run
    at gapplication.c line 1322
  • #12 main
    at nautilus-main.c line 102

Comment 1 Pedro Villavicencio 2011-09-29 12:38:10 UTC
we have the same issue at https://bugs.launchpad.net/gtk/+bug/861605
Comment 2 Matthias Clasen 2011-09-30 18:07:42 UTC
Without any description of when this happens, I can only guess that this is a case of missing cancellation for an async operation. We need to cancel when the dialog is destroyed before the operation is done.
Comment 3 Cosimo Cecchi 2011-10-03 15:52:38 UTC
Created attachment 198112 [details] [review]
appchooser: add a GCancellable to the search operation

So that we can cancel it when the dialog is destroyed.
Comment 4 Cosimo Cecchi 2011-10-03 15:52:42 UTC
Created attachment 198113 [details] [review]
appchooser: make the "Find applications online" follow search state

Set the button as insensitive while searching, so that it can't be
accidentally clicked twice.
Comment 5 Cosimo Cecchi 2011-10-03 15:53:26 UTC
No way to reproduce the bug, but the two attached patches should help in any case.
Comment 6 Matthias Clasen 2011-10-03 22:48:21 UTC
Review of attachment 198113 [details] [review]:

Makes sense, I guess.
Comment 7 Matthias Clasen 2011-10-03 22:48:36 UTC
Review of attachment 198112 [details] [review]:

ok
Comment 8 Cosimo Cecchi 2011-10-04 15:34:38 UTC
Attachment 198112 [details] pushed as 569b5ff - appchooser: add a GCancellable to the search operation
Attachment 198113 [details] pushed as 3a6996e - appchooser: make the "Find applications online" follow search state

Thanks, pushed to master now.
Comment 9 Sebastien Bacher 2011-10-10 12:49:50 UTC
Thanks, is there any reason to not commit those fixes to gtk-3-2 as well?